fixed the size of the logo for mobile (too large)

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ img{
 
 .header{
     width: 100%;
-    height: 250px;
+    height: 220px;
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -56,8 +56,8 @@ img{
 }
 
 .logo{
-    width: 130px;
-    margin-top: 1rem;
+    width: 100px;
+    margin-top: 2rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -126,7 +126,7 @@ img{
     font-weight: 700;
     color: #fff;
     text-transform: uppercase;
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
     font-size: 1.7rem;
     letter-spacing: 2px;
     text-align: center;
@@ -208,6 +208,7 @@ img{
     text-align: center;
     font-size: 2rem;
     color:#fff;
+    letter-spacing: 2px;
     text-transform: uppercase;
 }
 
@@ -239,7 +240,7 @@ img{
     height: 4px;
     background: #38373d;
     margin: 0 auto;
-    margin-top: -1.3rem;
+    margin-top: -1.4rem;
 }
 
 .border {
@@ -248,7 +249,7 @@ img{
     height: 4px;
     background: #ffffff;
     margin: 0 auto;
-    margin-top: -1.3rem;
+    margin-top: -1.4rem;
 }
 
 /*ICONS SMALL*/
